Fix gallery modal footer alignment [#149953899]

--- a/web-app/css/elurikkus-search.css
+++ b/web-app/css/elurikkus-search.css
@@ -159,10 +159,6 @@
     display: block;
 }
 
-.modal-footer > :not(:first-child) {
-    margin-left: 0;
-}
-
 .slider-handle.hide {
     display: none;
 }
